[package]
name = "corvus"
description = "Home agent for bridging room-level devices to MQTT"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/corvus"
repository = "https://github.com/proctorlabs/corvus"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [".github/**", "docs/**"]
workspace = "../"

[dependencies]
# Misc
lazy_static = "1.4"
unstructured = "0.3"
anyhow = "1.0"
derive_more = "0.99"
clap = "2.33"
structopt = "0.3"
async-trait = "0.1"
rand = "0.7"
chrono = "0.4"

log = "0.4"
simplelog = "0.8"

# runtime
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

# MQTT
rumqttc = "0.2"

# serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5"

# bluetooth
bluez = "0.2"

# GPIO
# sysfs_gpio = "0.5"
