[package]
name = "corvus"
description = "Home agent for bridging room-level devices to MQTT"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/corvus"
repository = "https://github.com/proctorlabs/corvus"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [".github/**", "docs/**"]
workspace = "../"

[dependencies]
# Misc
lazy_static = "1.4"
unstructured = "0.3"
anyhow = "1.0"
derive_more = "0.99"
clap = "2.33"
structopt = "0.3"
async-trait = "0.1"
rand = "0.8"
chrono = "0.4"
parking_lot = "0.11"

log = "0.4"
simplelog = "0.9"

# runtime
tokio = { version = "0.3", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# MQTT
rumqttc = "0.3"

# serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5"

# bluetooth
bluez = "0.3"

# GPIO
embedded-hal = "1.0.0-alpha.4"
linux-embedded-hal = { version = "0.4.0-alpha.0", features = ["gpio_cdev"] }
spin_sleep = "1.0"
nix = "0.19"
libc = "0.2"
